--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <!-- <script src="js/scripts.js"></script> -->
 </head>
 <body>
 
@@ -60,7 +60,7 @@
         <div id="lead-content">
             <h1>Kevin Kao</h1>
             <h2>Just a normal person.</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="docs/hello.txt" class="btn-rounded-white">Download Resume</a>
         </div>
 
         <div id="lead-overlay"></div>
