--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="lead-content">
             <h1>Kevin Kao</h1>
             <h2>Just a normal person.</h2>
-            <a href="docs/hello.txt" class="btn-rounded-white">Download Resume</a>
+            <a href="docs/main.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
 
         <div id="lead-overlay"></div>
